fix: fixed warnings